Run external solvers with ProcessBuilder